--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Nothing+You+Could+Do&family=Orbitron:wght@400..900&display=swap');
 @import "tailwindcss";
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark;
